add in forms html and css

--- a/patterns/cards/cards.css
+++ b/patterns/cards/cards.css
@@ -3,5 +3,5 @@
   background-repeat: no-repeat;
   background-size: auto;
   background-position: top left;
-  padding-top: 0;
+  padding-top: 20%;
 }
