--- a/patterns/forms/form.css
+++ b/patterns/forms/form.css
@@ -1,6 +1,5 @@
-form
-
-input, select {
+input,
+select {
   border-color: var(--color-secondary);
 }
 
@@ -21,7 +20,8 @@ input:checked {
 }
 
 .is-validated input:invalid,
-.is-validated input[type="checkbox"]:invalid + label::before {
+.is-validated input[type="checkbox"]:invalid + label::before,
+.is-validated input[type="radio"]:invalid + label::before {
   border-color: #f33;
 }
 
@@ -38,6 +38,7 @@ input:checked {
 
 .is-validated > .error-message:first-child,
 .is-validated input:invalid + .error-message,
+.is-validated textarea:invalid + .error-message,
 .is-validated input:invalid + label + .error-message {
   display: block;
 }
